# AIPayloadGuard

./: .gitignore  README.md
gateway/: build.gradle.kts  settings.gradle.kts
gateway/src/integrationTest/kotlin/com/boundaryguard/gateway/api/: GuardCheckControllerTests.kt
gateway/src/integrationTest/kotlin/com/boundaryguard/gateway/audit/: CompositeGuardEventSinkIntegrationTests.kt  GuardEventFixtures.kt  InMemoryRecentGuardEventBufferIntegrationTests.kt  (+2 more)
gateway/src/integrationTest/resources/: application-integrationTest.properties
gateway/src/main/kotlin/com/boundaryguard/gateway/: BoundaryGatewayApplication.kt
gateway/src/main/resources/db/migration/: V1__create_guard_events.sql
gateway/src/main/resources/templates/monitoring/: dashboard.html  event-detail.html
gateway/src/test/kotlin/com/boundaryguard/gateway/: BoundaryGatewayApplicationTests.kt
plans/: 2026-04-26-guard-decision-pipeline-detailed-implementation-v1.md  2026-04-26-universal-ai-boundary-guard-implementation-v1.md  2026-04-26-universal-ai-boundary-guard-specification-v1.md
proto/guard/v1/: .gitkeep  guard.proto
rust/: Cargo.toml
rust/boundary-core/: Cargo.toml
rust/boundary-core-service/: Cargo.toml  build.rs
rust/boundary-core-service/src/: event.rs  lib.rs  main.rs
rust/boundary-core-service/tests/: grpc_service_integration.rs  runtime_server_e2e.rs
rust/boundary-core/src/: detector.rs  lib.rs  normalizer.rs  redactor.rs  scorer.rs
rust/boundary-core/tests/: regression_eval_pack.rs
rust/boundary-core/tests/fixtures/regression/: text_payload_cases.json
rust/scenario-harness/: Cargo.toml
rust/scenario-harness/src/: main.rs
scripts/: run-scenario-harness.sh  validate-mvp.sh
(+30 files in other folders)
