[package]
name = "boundary-core-service"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
boundary-core = { path = "../boundary-core" }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
