[package]
name = "boundary-core-service"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
boundary-core = { path = "../boundary-core" }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tonic = "0.12"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
