[package]
name = "scenario-harness"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
boundary-core-service = { path = "../boundary-core-service" }
boundary-core = { path = "../boundary-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "time"] }
tonic = "0.12"
